tests/diagnostics/file_roles/public_declarations/function_in_test/expect.txt
# exit: 1
input/lib.test.coppice:1:8: error: public declarations are not allowed in .test.coppice files
  public function run() -> nil {
         ^
